objects/Tickets_Mapswith_Promocode__c.object
<CustomObject>
    <fields>
        <fullName>Max_number_Of_usage__c</fullName>
        <defaultValue>10000</defaultValue>
        <label>Max number Of usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promocodes__c</fullName>
        <label>Promocodes</label>
        <referenceTo>Promocodes__c</referenceTo>
        <relationshipLabel>Tickets_Mapswith_Promocode</relationshipLabel>
        <relationshipName>Tickets_Mapswith_Promocode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tickets__c</fullName>
        <label>Tickets</label>
        <referenceTo>TicketTypes__c</referenceTo>
        <relationshipLabel>Tickets_Mapswith_Promocode</relationshipLabel>
        <relationshipName>Tickets_Mapswith_Promocode</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tickets_Mapswith_Promocode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Promocodes__c</columns>
        <columns>Tickets__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TPC-{000}</displayFormat>
        <label>Tickets_Mapswith_Promocode Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets_Mapswith_Promocode</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>